# cpp-project-template

./: .gitignore  CMakeLists.txt  README.md
app/: CMakeLists.txt
lib/include/sublib2/: mult.h
lib/src/sublib1/: sum.cpp
lib/src/sublib2/: mult.cpp
tests/: CMakeLists.txt  sum_test.cpp
